2006-11-04  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * It seems I'm longer able to do simple comparisons, this 
          should fix #187 and is a real fix for #182

2006-10-26  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix encoding and decoding of eA and php versions. Only three numbers
          versions were encoded, this way file cache isn't removed when using
          svn snapshots or rc releases.
        * Fix a compile warning when using filename hashing instead of inode 
          hashing.
        * Optimize a part of the inode hashing function.
        * Remove a conditional compile for very old php versions in the filename
          hashing function.
        * Included the new control center written by Thomas Love. It rocks!

2006-10-19  Hans Rakers <hans at parse dot nl>

        * Replaced short php opening tags in control.php
        * Fixed typo in NEWS file
        * Fix for ticket #170 (handling of multi-dim globals by the optimizer)

2006-10-10  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix a bug in the ttl of the cache. see ticket #182
        * Release version 0.9.5

2006-09-19  Hans Rakers <hans at parse dot nl>

        * Get session config variables from local values instead of global
          values. This enables altering of session-related settings like
          gc_maxlifetime, entropy_file and entropy_length through ini_set().
          This fixes ticket #166

2006-09-18  Hans Rakers <hans at parse dot nl>

        * Fixed unbalanced ifdef in eaccelerator.h introduced in rev [269].
          This fixes ticket #177

2006-09-15  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Reverse changeset 205 (doc-comment exclusion) from Tom Regner 
          <t.regner at librics.de>. 
        * only put the function that has the same name as the class as contructor 
          if there isn't a __construct function. This fixes ticket #172